trunk/Archive2/4d/54bb29131b88d8/output
main.cpp:1:3: error: invalid preprocessing directive #Include
 # Include <cmath> 
   ^
main.cpp:7:46: warning: multi-character character constant [-Wmultichar]
     std:: cout  << std :: cbrt ( 27.0 )  <<  ' \n ' ; 
                                              ^
main.cpp:8:45: warning: multi-character character constant [-Wmultichar]
     std:: cout  << std :: cbrt ( 1.0 )  <<  ' \n ' ; 
                                             ^
main.cpp:9:47: warning: multi-character character constant [-Wmultichar]
     std:: cout  << std :: cbrt ( 125.0 )  <<  ' \n ' ; 
                                               ^
main.cpp:10:49: warning: multi-character character constant [-Wmultichar]
     std:: cout  << std :: cbrt ( - 0.125 )  <<  ' \n ' ; 
                                                 ^
main.cpp: In function 'int main()':
main.cpp:7:20: error: 'cbrt' is not a member of 'std'
     std:: cout  << std :: cbrt ( 27.0 )  <<  ' \n ' ; 
                    ^
main.cpp:8:20: error: 'cbrt' is not a member of 'std'
     std:: cout  << std :: cbrt ( 1.0 )  <<  ' \n ' ; 
                    ^
main.cpp:9:20: error: 'cbrt' is not a member of 'std'
     std:: cout  << std :: cbrt ( 125.0 )  <<  ' \n ' ; 
                    ^
main.cpp:10:20: error: 'cbrt' is not a member of 'std'
     std:: cout  << std :: cbrt ( - 0.125 )  <<  ' \n ' ; 
                    ^
