trunk/Archive2/4d/54bb29131b88d8/main.cpp
# Include <cmath> 
# include <iostream>
 
int main ( ) 
{ 
    std:: cout  <<  std:: fixed ; 
    std:: cout  << std :: cbrt ( 27.0 )  <<  ' \n ' ; 
    std:: cout  << std :: cbrt ( 1.0 )  <<  ' \n ' ; 
    std:: cout  << std :: cbrt ( 125.0 )  <<  ' \n ' ; 
    std:: cout  << std :: cbrt ( - 0.125 )  <<  ' \n ' ; 
}